--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Web de Mario Gallego</title>
 </head>
 <body>
-    <h1>Bienvenido a la web de Mario Gallego</h1>
+    <h1>Bienvenido a la web de Mario Gallego Garcia</h1>
     <img src="foto.jpg" width="300">
     <script src="script.js"></script>
 </body>
