--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <title>Web de Mario Gallego Garcia</title>
+    <title>Web de Mario Gallego Garciaaaaa</title>
 </head>
 <body>
     <h1>Bienvenido a la web de Mario Gallego Garcia</h1>
