cambio mejora pagina web

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Web de Mario Gallego Garciaaaaa</title>
-    <p>CAMBIO</p>
+    <title>Web de Mario Gallego Garcia</title>
 </head>
 <body>
+    
     <h1>Bienvenido a la web de Mario Gallego Garcia</h1>
-    <img src="foto.jpg" width="300">
+    
+    <img src="foto.jpg" width="300" alt="Foto de Mario">
+
+    <div class="formulario-container">
+        <h3>Formulario de Prueba CI/CD</h3>
+        <input type="text" id="campoTexto" placeholder="Escribe algo aquí...">
+        <button id="btnProcesar">Procesar Datos</button>
+        <p id="resultado"></p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
