--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <img src="foto.jpg" width="300" alt="Foto de Mario">
 
     <div class="formulario-container">
-        <h3>Formulario de Prueba CI/CD</h3>
+        <h3>Formulario</h3>
         <input type="text" id="campoTexto" placeholder="Escribe algo aquí...">
-        <button id="btnProcesar">Procesar Datos</button>
+        <button id="btnProcesar">Introduce texto</button>
         <p id="resultado"></p>
     </div>
 
